fix content spacing

--- a/styles/content.css
+++ b/styles/content.css
@@ -2,7 +2,8 @@
     width: 1100px;
     justify-content: space-between;
     margin: auto;
-    gap: 24px;
+    gap: 45px;
+    flex-wrap: nowrap;
 }
 .detail-top{
     justify-content: space-between;
@@ -12,7 +13,7 @@
 }
 .middle-content{
     font-size: 18px;
-    width: 660px;
+    max-width: 660px;
     gap: 24px;
 }
 .middle-content h1{
